<resources>
    <string name="app_name">MyBitcoinApp</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="main_title">Список криптовалют</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="bitcoin">Bitcoin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>