<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.list.ItemListFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/main_title"
                android:textSize="@dimen/large_text_size"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginStart="@dimen/middle_margin"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginStart="@dimen/middle_margin"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_USD"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="@dimen/chip_height"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"
                    android:textSize="@dimen/small_text_size"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_EUR"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="@dimen/chip_height"
                    android:layout_height="wrap_content"
                    android:text="@string/eur"
                    android:textSize="@dimen/small_text_size"
                    android:textAlignment="center"
                    android:gravity="center"/>

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.bitcoin.ItemFragment"
        android:layout_width="0dp"
        android:layout_height="@dimen/recycler_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item" />

</androidx.constraintlayout.widget.ConstraintLayout>