<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.info.InfoFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back_button"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/back_button_margin"
                android:layout_marginTop="@dimen/back_button_margin"
                android:background="@drawable/ic_back"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <TextView android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/bitcoin"
                android:textSize="@dimen/large_text_size"
                android:layout_marginTop="@dimen/middle_margin"
                android:layout_marginStart="@dimen/very_large_margin"/>


        </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/image_bitcoin"
        android:layout_width="@dimen/info_image_size"
        android:layout_height="@dimen/info_image_size"
        android:layout_marginTop="@dimen/info_image_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/some_is_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_bitcoin"
        android:layout_marginTop="@dimen/middle_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:text="@string/description"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:id="@+id/bitcoin_is_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_is_"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"
        android:gravity="top" />

    <TextView
        android:id="@+id/cat_is_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bitcoin_is_"
        android:text="@string/category"
        android:layout_marginTop="@dimen/middle_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:textSize="@dimen/medium_text_size"/>

    <TextView
        android:id="@+id/cat_text_is_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_is_"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/middle_margin"
        android:layout_marginEnd="@dimen/middle_margin"/>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/text_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="image_bitcoin,  some_is_, bitcoin_is_, cat_is_, cat_text_is_"/>

</androidx.constraintlayout.widget.ConstraintLayout>